; ModuleID = '/home/carl/AnghaBench/kphp-kdb/util/extr_replicator.c_update_rb_stats.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/util/extr_replicator.c_update_rb_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.related_binlog = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.related_binlog*)* @update_rb_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_rb_stats(%struct.related_binlog* %0) #0 {
  %2 = alloca %struct.related_binlog*, align 8
  %3 = alloca i32, align 4
  store %struct.related_binlog* %0, %struct.related_binlog** %2, align 8
  %4 = load %struct.related_binlog*, %struct.related_binlog** %2, align 8
  %5 = getelementptr inbounds %struct.related_binlog, %struct.related_binlog* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %24

8:                                                ; preds = %1
  %9 = load %struct.related_binlog*, %struct.related_binlog** %2, align 8
  %10 = call i32 @classify_slave(%struct.related_binlog* %9)
  store i32 %10, i32* %3, align 4
  %11 = load %struct.related_binlog*, %struct.related_binlog** %2, align 8
  %12 = load %struct.related_binlog*, %struct.related_binlog** %2, align 8
  %13 = getelementptr inbounds %struct.related_binlog, %struct.related_binlog* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @update_rb_stats_copy(%struct.related_binlog* %11, i64 %14, i32 %15)
  %17 = load %struct.related_binlog*, %struct.related_binlog** %2, align 8
  %18 = load %struct.related_binlog*, %struct.related_binlog** %2, align 8
  %19 = getelementptr inbounds %struct.related_binlog, %struct.related_binlog* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %20, 1
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @update_rb_stats_copy(%struct.related_binlog* %17, i64 %21, i32 %22)
  br label %24

24:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @classify_slave(%struct.related_binlog*) #1

declare dso_local i32 @update_rb_stats_copy(%struct.related_binlog*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
